Added new feature to WorldCleaner, abyss opening now can play sound
Took 51 seconds